# ROSWebServices

./: README.md  build.xml
ros/coros/coros_actions/: CMakeLists.txt  package.xml
ros/coros/coros_actions/include/coros_actions/: BaseAction.h  ComputeCostAction.h  ComputeMinimalCostAction.h  GroupAction.h  ReceivedBiddingAction.h  SingleAction.h
ros/coros/coros_common/: CMakeLists.txt  package.xml
ros/coros/coros_common/include/coros_common/: Pose2D.h  globals.h  math_lib.h  serial_lib.h  socket_msgs.h  string_lib.h
ros/coros/coros_common/src/: Pose2D.cpp  nav_lib.cpp
ros/coros/coros_communication/: CMakeLists.txt  package.xml
ros/coros/coros_communication/include/coros_communication/: AbstractClient.h  AbstractServer.h  NodeClient.h  NodeServer.h
ros/coros/coros_communication/launch/: local_ip_address_bringup.launch
ros/coros/coros_communication/scripts/: ip_address_publisher.py  ip_address_service.py
ros/coros/coros_communication/src/: AbstractClient.cpp  AbstractServer.cpp  NodeClient.cpp  NodeServer.cpp  rospy
ros/coros/coros_core/: CMakeLists.txt  package.xml
ros/coros/coros_core/src/actions/: NeighborhoodUpdateAction.h
ros/coros/coros_core/src/messages/: AuctionMessage.h  ConnectionMessage.h  RequestMessage.h
ros/coros/coros_core/src/tasks/: CourierDeliveryTask.h
ros/coros/coros_kb/: CMakeLists.txt  package.xml
ros/coros/coros_kb/include/coros_kb/: AgentConfiguration.h  AgentState.h  NeighborsConfiguration.h  TaskState.h  TasksStateManager.h
ros/coros/coros_kb/src/: AgentConfiguration.cpp  AgentState.cpp  NeighborsConfiguration.cpp
ros/coros/coros_message_converter/: CMakeLists.thors.test.txt  CMakeLists.txt  package.xml
ros/coros/coros_message_converter/launch/: coros_message_from_json_converters.launch  coros_message_to_json_converters.launch
ros/coros/coros_message_converter/src/: coros_msg_from_json.py  coros_msg_to_json.py  test_from_json.py  testjson.cpp
ros/coros/coros_message_converter/test/: test_all.test  test_coros_message_converter.py
ros/coros/coros_messages/: CMakeLists.txt  package.xml
ros/coros/coros_messages/include/coros_messages/: AvailableTargetsMessage.h  BaseMessage.h  CostMessage.h  HelloMessage.h  NeighborhoodMessage.h  ResultMessage.h  RobotMessage.h  TargetsMessage.h  TaskMessage.h
ros/coros/coros_messages/msg/: AvailableTargetsMsg.msg  CostMsg.msg  HelloMsg.msg  NeighborhoodMsg.msg  OutBoxMsg.msg  ResultMsg.msg  RobotMsg.msg  TargetsMsg.msg  TaskMsg.msg
ros/coros/coros_messages/srv/: IPAddressService.srv  neighborhood.srv
ros/coros/coros_node/: CMakeLists.txt  package.xml
ros/coros/coros_node/include/coros_node/: Node.h  PublishersManager.h  SubscribersManager.h
ros/coros/coros_node/src/: Node.cpp  PublishersManager.cpp  SubscribersManager.cpp
ros/coros/coros_operator/: CMakeLists.txt  package.xml
ros/coros/coros_operator/include/coros_operator/: IAgentOperator.h  IRobotOperator.h  RobotOperator.h  SimpleOperator.h
ros/coros/coros_processing/: CMakeLists.txt  package.xml
ros/coros/coros_processing/include/coros_processing/: IActionHandler.h  IMessageProcessor.h  ITaskPerformer.h
ros/coros/coros_simulation_helper/: CMakeLists.txt  package.xml
ros/coros/coros_simulation_helper/include/coros_simulation_helper/: DiscoveryHelperOperator.h  DiscoveryHelperServer.h
ros/coros/coros_simulation_helper/launch/: discovery_helper_app.launch
ros/coros/coros_simulation_helper/src/: DiscoveryHelperOperator.cpp  DiscoveryHelperServer.cpp  discovery_helper_operator_app.cpp  discovery_helper_server_app.cpp
ros/coros/discovery_app_2/: CMakeLists.txt  package.xml
ros/coros/discovery_app_2/config/: inbox_topics.yaml  outbox_topics.yaml
ros/coros/discovery_app_2/include/discovery_app_2/: DiscoveryConfiguration.h  DiscoveryOperator.h  hello_params.h
ros/coros/discovery_app_2/launch/: coros_message_from_json_converters.launch  coros_message_to_json_converters.launch  discovery_app.launch  dispatcher_app.launch  launch_all.launch
ros/coros/discovery_app_2/src/: DiscoveryConfiguration.cpp  DiscoveryOperator.cpp  discovery_operator_app.cpp
ros/coros/dispatcher_app/: CMakeLists.txt  package.xml
ros/coros/dispatcher_app/config/: inbox_topics.yaml  outbox_topics.yaml
ros/coros/dispatcher_app/include/dispatcher_app/: DispatcherReceiver.h  (+2 more)
ros/coros/dispatcher_app/launch/: dispatcher_app.launch
ros/coros/dispatcher_app/src/: DispatcherConfiguration.cpp  DispatcherReceiver.cpp  DispatcherSender.cpp  dispatcher_receiver_app.cpp  dispatcher_sender_app.cpp
ros/coros/robot_control/: CMakeLists.txt  package.xml
ros/mybot/delivery_app/: CMakeLists.txt  package.xml
ros/mybot/delivery_app/config/: inbox_topics.yaml  outbox_topics.yaml
ros/mybot/delivery_app/launch/: delivery_app.launch  delivery_message_from_json_converters.launch  delivery_message_to_json_converters.launch  dispatcher_app.launch  launch_all.launch
ros/mybot/delivery_app/msg/: CorosHeader.msg  DeliveryRequestMsg.msg  DeliveryResultMsg.msg  DeliveryStatusMsg.msg
ros/mybot/delivery_app/src/: DeliveryConfiguration.cpp  DeliveryOperator.cpp  DeliveryUser.cpp  delivery_operator_app.cpp  delivery_user_app.cpp
ros/mybot/mybot_delivery_app/: CMakeLists.txt  package.xml
ros/mybot/mybot_delivery_app/config/: inbox_topics.yaml  outbox_topics.yaml
ros/mybot/mybot_delivery_app/launch/: dispatcher_app.launch  launch_all.launch  mybot_delivery_app.launch  mybot_delivery_message_from_json_converters.launch  mybot_delivery_message_to_json_converters.launch
ros/mybot/mybot_delivery_app/msg/: DeliveryRequestMsg.msg
ros/mybot/mybot_delivery_app/src/: MybotDeliveryOperator.cpp  mybot_delivery_operator_app.cpp
ros/path_planner/: CMakeLists.txt  package.xml
ros/path_planner/action/: GlobalPathPlannerActionMessage.action
ros/path_planner/include/path_planner/: Map.h  OccupancyGridMap.h  WeightedGraphMap.h  global_planner.h  global_planner_action_server.h
ros/path_planner/src/global_planner/: global_planner.cpp
ros/path_planner/src/map/: Map.cpp  MapGenerator.cpp  OccupancyGridMap.cpp
ros/path_planner/src/path/: Path.cpp  Path.h
(+150 files in other folders)
