<?xml version="1.0"?>
<package>
  <name>path_planner</name>
  <version>0.0.1</version>
  <description>The path planning package</description>
  <maintainer email="akoubaa@coins-lab.org">A. Koubaa</maintainer>
  <license>TODO</license>
  <author email="akoubaa@coins-lab.org">A. Koubaa</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>libpcl-all</build_depend> 
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <build_depend>coros_common</build_depend>

  <run_depend>roscpp</run_depend>  
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>libpcl-all</run_depend> 
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend> 
  
  <run_depend>coros_common</run_depend>

</package>