<?xml version="1.0"?>
<package>
  <name>coros_core</name>
  <version>0.0.1</version>
  <description>The coros core package</description>
  <maintainer email="sritia@gmail.com">M.-F. Sriti</maintainer>
  <license>TODO</license>
  <author email="sritia@gmail.com">M.-F. Sriti</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
 
  <export>
  	<nav_core plugin="${prefix}/global_planner_plugin.xml" />
  </export>
  
  <!--
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  
   <run_depend>message_runtime</run_depend>
   
  <run_depend>geometry_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>nav_core</run_depend>
  <run_depend>nav_msgs</run_depend>
   <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
   -->
  
</package>