<?xml version="1.0"?>
<package>
  <name>coros_message_converter</name>
  <version>0.0.0</version>
  <description>The coros_message_converter package</description>
  <maintainer email="foued@todo.todo">foued</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>rospy_message_converter</build_depend>
  <build_depend>coros_messages</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rospy_message_converter</run_depend>
  <run_depend>coros_messages</run_depend>
  <run_depend>rostest</run_depend> 
</package>
