<?xml version="1.0"?>
<package>
  <name>coros_messages</name>
  <version>0.0.1</version>
  <description>The coros_messages package</description>
  <maintainer email="sritia@gmail.com">M.-F. Sriti</maintainer>
  <license>TODO</license>
  <author email="sritia@gmail.com">M.-F. Sriti</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
</package>