<?xml version="1.0"?>
<package>
  <name>coros_operator</name>
  <version>0.0.1</version>
  <description>The coros_operator package</description>
  <maintainer email="sritia@gmail.com">M.-F. Sriti</maintainer>
  <license>TODO</license>
  <author email="sritia@gmail.com">M.-F. Sriti</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>coros_processing</build_depend>
  <build_depend>coros_communication</build_depend>
  <build_depend>robot_control</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>coros_processing</run_depend>
  <run_depend>coros_communication</run_depend>
  <run_depend>robot_control</run_depend>
  <run_depend>roscpp</run_depend>
</package>