<?xml version="1.0"?>
<package>
  <name>coros_simulation_helper</name>
  <version>0.0.1</version>
  <description>The coros_simulation_helper package</description>
  <maintainer email="coros@todo.todo">coros</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>coros_common</build_depend>
  <build_depend>coros_communication</build_depend>
  <build_depend>coros_kb</build_depend>
  <build_depend>coros_messages</build_depend>
  <build_depend>coros_operator</build_depend>
  <build_depend>roscpp</build_depend>
  
  <run_depend>coros_common</run_depend>
  <run_depend>coros_communication</run_depend>
  <run_depend>coros_kb</run_depend>
  <run_depend>coros_messages</run_depend>
  <run_depend>coros_operator</run_depend>
  <run_depend>roscpp</run_depend>
  
</package>