<?xml version="1.0"?>
<package>
  <name>discovery_app_2</name>
  <version>0.0.2</version>
  <description>The Discovery Application based on JSON.</description>
  <maintainer email="akoubaa@coins-lab.org">A. Koubaa</maintainer>
  <license>TODO</license>
  <author email="akoubaa@coins-lab.org">A. Koubaa</author>
  <author email="sritia@gmail.com">M.-F. Sriti</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>coros_kb</build_depend>
  <build_depend>coros_common</build_depend>
  <build_depend>coros_messages</build_depend>
  <build_depend>coros_communication</build_depend>
  <build_depend>coros_operator</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>coros_common</run_depend>
  <run_depend>coros_kb</run_depend>
  <run_depend>coros_messages</run_depend>
  <run_depend>coros_communication</run_depend>
  <run_depend>coros_operator</run_depend>
  <run_depend>roscpp</run_depend>
</package>
