<?xml version="1.0"?>
<package>
  <name>dispatcher_app</name>
  <version>0.0.1</version>
  <description>The dispatcher_app package</description>
  <maintainer email="sritia@gmail.com">M.-F. Sriti</maintainer>
  <license>TODO</license>
  <author email="akoubaa@coins-lab.org">M.-F. Sriti</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>coros_common</build_depend>
  <build_depend>coros_messages</build_depend>
  <build_depend>coros_communication</build_depend>
  <build_depend>coros_kb</build_depend>
  <build_depend>coros_operator</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>coros_common</run_depend>
  <run_depend>coros_messages</run_depend>
  <run_depend>coros_communication</run_depend>
  <run_depend>coros_kb</run_depend>
  <run_depend>coros_operator</run_depend>
  <run_depend>roscpp</run_depend>
</package>
