<?xml version="1.0"?>
<package>
  <name>robot_control</name>
  <version>0.0.0</version>
  <description>The robot_control package</description>
  <maintainer email="coros@todo.todo">coros</maintainer>
  <license>TODO</license>
 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  
  <build_depend>coros_common</build_depend>
  <build_depend>coros_communication</build_depend>
  <build_depend>path_planner</build_depend>  
  
  <run_depend>roscpp</run_depend>  
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend> 
  <run_depend>move_base_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  
  <run_depend>coros_common</run_depend>
  <run_depend>coros_communication</run_depend>
  <run_depend>path_planner</run_depend>  

</package>